--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
   "main": "index.js",
   "keywords": ["web", "server", "framework", "api", "app"],
   "author": "erwinkulasic",
+  "repository": "git://github.com/erwinkulasic/epyc.git",
   "license": "MIT"
 }
