--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "epyc",
   "version": "1.0.0",
-  "description": "Epyc is a small, lightweight node.js server.",
+  "description": "epyc is a small, lightweight node.js server.",
   "main": "index.js",
   "keywords": ["web", "server", "framework", "api", "app"],
   "author": "erwinkulasic",
