clear some useless files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 dev.test.js
 /node_modules
-project
-/assets/epyc-header.psd
-/assets/epyc-header.png
-/assets/epyc-header-light.png
-README.mdold
+dev
