--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "epyc",
 	"version": "1.1.0",
 	"description": "epyc is a lightweight nodejs server.",
-	"main": "index.js",
+	"main": "./src/index.js",
 	"keywords": [
 		"web",
 		"server",
@@ -11,28 +11,29 @@
 		"app",
 		"middelware",
 		"node",
-		"fast"
+		"fastest",
+		"http",
+		"https",
+		"httpserver"
 	],
 	"author": "Erwin <erwinkulasic@gmail.com> (https://erwinkulasic.com)",
 	"repository": "git://github.com/erwinkulasic/epyc.git",
 	"homepage": "https://github.com/erwinkulasic/epyc#readme",
 	"license": "MIT",
 	"scripts": {
-		"test": "node ./travis.prod.test.js",
-		"dev": "nodemon dev.test.js"
+		"test": "node ./.travis/travis.prod.test.js",
+		"dev": "nodemon ./.internal/dev/dev.test.js"
 	},
-	"dependencies": {
-		"@types/node": "^16.11.10",
-		"qs": "^6.10.1",
-		"url-pattern": "^1.0.3"
-	},
-	"devDependencies": {},
 	"bugs": {
 		"url": "https://github.com/erwinkulasic/epyc/issues",
 		"email": "erwinkulasic@gmail.com"
 	},
-	"types": "./index.d.ts",
+	"types": "./src/types.d.ts",
 	"engines": {
 		"node": ">= 6.0.0"
+	},
+	"dependencies": {
+		"parseurl": "^1.3.3",
+		"path-to-regexp": "^6.2.1"
 	}
 }
